--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -3,10 +3,10 @@
     <div class="col-md-8">
       <h2>Daftar Contact</h2>
 
-      <a href="/contact/add" class="btn btn-outline-primary md-2">Tambah Data Contact</a>
+      <a href="/contact/add" class="btn btn-outline-primary md-3">Tambah Data Contact</a>
 
       <% if (msg.length !== 0) { %>
-        <div class="alert alert-success" role="alert">
+        <div class="alert alert-success mt-3" role="alert">
           <%= msg %>
         </div>
       <% } %>
