--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -13,7 +13,11 @@
                       <h5 class="card-title"><%= contact.nama %></h5>
                       <h6 class="card-subtitle mb-2 text-muted"><%= contact.noHp %></h6>
                       <p class="card-text"><%= contact.email %></p>
-                      <a href="/contact" class="btn btn-outline-secondary">Kembali Ke Daftar Contact.</a>
+                      <a href="/contact/edit/<%= contact.nama %>" 
+                        class="btn btn-outline-info">Edit</a>
+                      <a href="/contact/delete/<%= contact.nama %>" 
+                        class="btn btn-outline-danger" onclick="return confirm('yakin?')">Hapus</a>
+                      <a href="/contact" class="btn btn-outline-secondary">Kembali</a>
                     </div>
                     <% } %>
                 </div>
